--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,8 @@
 <!-- <header class="bg-dark py-5"> -->
 <header class="customHeader py-5">
     <div class="container px-4 px-lg-5 my-5">
-        <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">Shop in style</h1>
+        <div class="text-center text-white headerTitle">
+            <h1 class="display-4 fw-bolder">Isa Shiny SkinCare</h1>
             <p class="lead fw-normal text-white-50 mb-0">Cuidado de la piel del rostro, cabello y mas</p>
         </div>
     </div>
@@ -12,20 +12,15 @@
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            <div class="col mb-5">
+            <div class="col mb-5" *ngFor="let product of products">
                 <div class="card h-100">
-                    <!-- Product image-->
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder">Fancy Product</h5>
-                            <!-- Product price-->
-                            $40.00 - $80.00
+                            <h5 class="fw-bolder">{{ product.productName }}</h5>
+                            ${{product.price}}
                         </div>
                     </div>
-                    <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="row">
                             <div class="col-12 col-md-6 mb-2">
@@ -43,18 +38,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col mb-5">
+            <!-- <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                    <!-- Product image-->
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
                             <h5 class="fw-bolder">Special Item</h5>
-                            <!-- Product reviews-->
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
@@ -62,12 +52,10 @@
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
                             </div>
-                            <!-- Product price-->
                             <span class="text-muted text-decoration-line-through">$20.00</span>
                             $18.00
                         </div>
                     </div>
-                    <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="row">
                             <div class="col-12 col-md-6 mb-2">
@@ -87,21 +75,15 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                    <!-- Product image-->
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
                             <h5 class="fw-bolder">Sale Item</h5>
-                            <!-- Product price-->
                             <span class="text-muted text-decoration-line-through">$50.00</span>
                             $25.00
                         </div>
                     </div>
-                    <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="row">
                             <div class="col-12 col-md-6 mb-2">
@@ -121,14 +103,11 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Product image-->
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
                             <h5 class="fw-bolder">Popular Item</h5>
-                            <!-- Product reviews-->
+                            
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
@@ -136,11 +115,10 @@
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
                             </div>
-                            <!-- Product price-->
+                            
                             $40.00
                         </div>
                     </div>
-                    <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="row">
                             <div class="col-12 col-md-6 mb-2">
@@ -160,21 +138,20 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Sale badge-->
+                    
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                    <!-- Product image-->
+                    
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
+                    
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
+                            
                             <h5 class="fw-bolder">Sale Item</h5>
-                            <!-- Product price-->
+                            
                             <span class="text-muted text-decoration-line-through">$50.00</span>
                             $25.00
                         </div>
                     </div>
-                    <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="row">
                             <div class="col-12 col-md-6 mb-2">
@@ -194,18 +171,17 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Product image-->
+                    
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
+                    
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
+                            
                             <h5 class="fw-bolder">Fancy Product</h5>
-                            <!-- Product price-->
+                            
                             $120.00 - $280.00
                         </div>
                     </div>
-                    <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="row">
                             <div class="col-12 col-md-6 mb-2">
@@ -225,16 +201,16 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Sale badge-->
+                    
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                    <!-- Product image-->
+                    
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
+                    
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
+                            
                             <h5 class="fw-bolder">Special Item</h5>
-                            <!-- Product reviews-->
+                            
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
@@ -242,12 +218,11 @@
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
                             </div>
-                            <!-- Product price-->
+                            
                             <span class="text-muted text-decoration-line-through">$20.00</span>
                             $18.00
                         </div>
                     </div>
-                    <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="row">
                             <div class="col-12 col-md-6 mb-2">
@@ -267,14 +242,14 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Product image-->
+                    
                     <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
+                    
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
+                            
                             <h5 class="fw-bolder">Popular Item</h5>
-                            <!-- Product reviews-->
+                            
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
@@ -282,11 +257,10 @@
                                 <div class="bi-star-fill"></div>
                                 <div class="bi-star-fill"></div>
                             </div>
-                            <!-- Product price-->
+                            
                             $40.00
                         </div>
                     </div>
-                    <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="row">
                             <div class="col-12 col-md-6 mb-2">
@@ -304,7 +278,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
