--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,18 +14,19 @@
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-5" *ngFor="let product of products">
                 <div class="card h-100">
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <!-- <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." /> -->
+                    <img src="{{ product.imageFullPath }}" alt="" class="card-img-top">
                     <div class="card-body p-4">
                         <div class="text-center">
                             <h5 class="fw-bolder">{{ product.productName }}</h5>
-                            ${{product.price}}
+                            {{product.price | currency}}
                         </div>
                     </div>
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="row">
                             <div class="col-12 col-md-6 mb-2">
                                 <div class="text-center">
-                                    <a class="btn btn-outline-dark mt-auto" href="#">
+                                    <a class="btn btn-outline-dark mt-auto" [routerLink]="['/products/', product.id, 'product-details']">
                                         <i class="bi bi-info-circle-fill"></i> Ver</a></div>
                             </div>
                             <div class="col-12 col-md-6 mb-2">
