--- a/src/app/partials/navbar/navbar.component.html
+++ b/src/app/partials/navbar/navbar.component.html
@@ -1,5 +1,4 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
-<nav class="navbar navbar-expand-lg navbar-light" id="navegacion">
+<nav class="navbar navbar-expand-lg navbar-light sticky-top" id="navegacion">
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="#!">Isa Shiny Skin</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
